Bug 269853 - Doesn't offer 3G connection
Summary: Doesn't offer 3G connection
Status: RESOLVED FIXED
Alias: None
Product: knetworkmanager
Classification: Unmaintained
Component: ppp (other bugs)
Version First Reported In: 0.9
Platform: Unlisted Binaries Linux
: NOR normal
Target Milestone: ---
Assignee: Will Stephenson
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-04-01 00:35 UTC by David
Modified: 2011-05-26 23:50 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description David 2011-04-01 00:35:26 UTC
Version:           0.9 (using KDE 4.6.1) 
OS:                Linux

When plugging the 3G modem, the application adopts the icon of a mobile phone (as expected). Nevertheless, when clicking on it, only the wifi appears in the fold-up menu, no option to establish the 3G connection is given.

It is a regression, because I remember being able to establish the 3G connection.

I am using version 0.9.svn1192577-168.3, the one offered by the KDE semi-official binary repository of OpenSuse. The package's name in such repository is NetworkManager-kde4


Reproducible: Always
Comment 1 Lamarque V. Souza 2011-04-01 06:28:18 UTC
Git commit f2a9e0b68747537303f8c89211ffb31ad4326959 by Lamarque V. Souza.
Committed on 01/04/2011 at 06:29.
Pushed by lvsouza into branch 'master'.

Opens Mobile Connection Wizard to create a 3G connection when modem is
inserted and no 3G connection has been created yet.

BUG: 269853

M  +6    -0    applet/activatableitem.cpp     
M  +3    -0    applet/activatableitem.h     
M  +6    -0    applet/activatablelistwidget.cpp     
M  +7    -0    applet/activatablelistwidget.h     
M  +11   -0    applet/nmpopup.cpp     
M  +2    -0    settings/configshell/CMakeLists.txt     
M  +22   -1    settings/configshell/main.cpp     

http://commits.kde.org/networkmanagement/f2a9e0b68747537303f8c89211ffb31ad4326959
Comment 2 Lamarque V. Souza 2011-04-01 06:44:07 UTC
Git commit fac15b53180a9ae0332354c332db253533498e30 by Lamarque V. Souza.
Committed on 01/04/2011 at 06:29.
Pushed by lvsouza into branch 'nm09'.

Opens Mobile Connection Wizard to create a 3G connection when modem is
inserted and no 3G connection has been created yet.

BUG: 269853

M  +6    -0    applet/activatableitem.cpp     
M  +3    -0    applet/activatableitem.h     
M  +6    -0    applet/activatablelistwidget.cpp     
M  +7    -0    applet/activatablelistwidget.h     
M  +11   -0    applet/nmpopup.cpp     
M  +2    -0    settings/configshell/CMakeLists.txt     
M  +17   -2    settings/configshell/main.cpp     

http://commits.kde.org/networkmanagement/fac15b53180a9ae0332354c332db253533498e30
Comment 3 Lamarque V. Souza 2011-04-02 21:45:53 UTC
Git commit bf846e46597f18103f7adafa76ce16027bfefe02 by Lamarque V. Souza.
Committed on 02/04/2011 at 21:48.
Pushed by lvsouza into branch 'master'.

Fix building networkmanagement due to missing Qt XML library linking.
Thanks Rajeesh K Nambiar for the patch.

CCBUG: 269853
REVIEW: 101014

M  +2    -2    settings/configshell/CMakeLists.txt     

http://commits.kde.org/networkmanagement/bf846e46597f18103f7adafa76ce16027bfefe02
Comment 4 Lamarque V. Souza 2011-04-02 22:12:14 UTC
Git commit 863fd5a873d1b894aa8acbe026e07cfc30fa36f6 by Lamarque V. Souza.
Committed on 02/04/2011 at 22:15.
Pushed by lvsouza into branch 'nm09'.

Fix building networkmanagement due to missing Qt XML library linking.
Thanks Rajeesh K Nambiar for the patch.

CCBUG: 269853
REVIEW: 101014

M  +2    -2    settings/configshell/CMakeLists.txt     

http://commits.kde.org/networkmanagement/863fd5a873d1b894aa8acbe026e07cfc30fa36f6
Comment 5 Lamarque V. Souza 2011-05-10 23:27:05 UTC
Git commit 87b2038e204e566a6ea096110e0db5a80a78a1f6 by Lamarque V. Souza.
Committed on 10/05/2011 at 23:23.
Pushed by lvsouza into branch 'master'.

Change the launch of Mobile Connection Wizard into a notification.

BUG: 272942
CCBUG: 269853

M  +1    -1    kded/service.cpp     
M  +0    -24   libs/service/networkinterfacemonitor.cpp     
M  +49   -1    libs/service/notificationmanager.cpp     
M  +5    -1    libs/service/notificationmanager.h     

http://commits.kde.org/networkmanagement/87b2038e204e566a6ea096110e0db5a80a78a1f6
Comment 6 Will Stephenson 2011-05-26 23:50:46 UTC
Git commit 21d5765b98dca8f49e63d1cc12c9befccb1ec953 by Will Stephenson, on behalf of Lamarque V. Souza.
Committed on 10/05/2011 at 23:23.
Pushed by wstephens into branch 'libnm-qt'.

Change the launch of Mobile Connection Wizard into a notification.

BUG: 272942
CCBUG: 269853
(cherry picked from commit 87b2038e204e566a6ea096110e0db5a80a78a1f6)

M  +1    -1    kded/service.cpp     
M  +0    -24   libs/service/networkinterfacemonitor.cpp     
M  +49   -1    libs/service/notificationmanager.cpp     
M  +5    -1    libs/service/notificationmanager.h     

http://commits.kde.org/networkmanagement/21d5765b98dca8f49e63d1cc12c9befccb1ec953