Opens Mobile Connection Wizard to create a 3G connection when modem is inserted and no 3G connection has been created yet.

BUG: 269853